update nginx conf

--- a/nginx/status.conf
+++ b/nginx/status.conf
@@ -39,8 +39,8 @@ server {
 	#deny all;
 
 	# NGINX provides a sample HTML status page for easy dashboard view
-	root /usr/share/nginx/html;
-	location = /status.html { }
+	root /opt/app-root/src;
+	location = /index.html { }
 
 	# Standard HTTP features are fully supported with the status page.
 	# An example below provides a redirect from "/" to "/status.html"
